[package]
name = "dkr"
version = "0.1.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]
edition = "2018"

[dependencies]
app_dirs = "1.2"
duct = "0.11"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.2"
tempfile = "3.0"
yaml-rust = "0.4"
